Added cordova instructions, and cordova.js into index.html

--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,7 @@
   <canvas id="canvas"></canvas>
 
   <!-- must be after the canvas -->
+  <script type="text/javascript" src="cordova.js"></script>
   <script type="text/javascript" src="spark/spark.js"></script>
   <script type="text/javascript" src="game/demo.js"></script>
 </body>
