--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
   </style>
 </head>
 <body>
-  <canvas id="canvas"></canvas>
+  <canvas id="canvas" width="640" height="480"></canvas>
 
   <!-- must be after the canvas -->
   <script type="text/javascript" src="spark/spark.js"></script>
