moved planets into its own folder and created a base planets.html file

--- a/www/planets.html
+++ b/www/planets.html
@@ -32,6 +32,6 @@
 
   <!-- must be after the canvas -->
   <script type="text/javascript" src="spark/spark.js"></script>
-  <script type="text/javascript" src="game/planets/main.js"></script>
+  <script type="text/javascript" src="planets/main.js"></script>
 </body>
 </html>
