--- a/www/planets.html
+++ b/www/planets.html
@@ -31,6 +31,7 @@
   <canvas id="canvas" width="640" height="640"></canvas>
 
   <!-- must be after the canvas -->
+  <script type="text/javascript" src="cordova.js"></script>
   <script type="text/javascript" src="spark/spark.js"></script>
   <script type="text/javascript" src="planets/main.js"></script>
 </body>
