First pass at TypeScript implementation.

--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
   <canvas id="canvas" width="640" height="640"></canvas>
 
   <!-- must be after the canvas -->
-  <script type="text/javascript" src="spark/spark.js"></script>
-  <script type="text/javascript" src="game/demo.js"></script>
+  <script type="text/javascript" src="game/spark.js"></script>
+  <script type="text/javascript" src="game/main.js"></script>
 </body>
 </html>
