Removed all TypeScript sources. Reorganized haxe code.

--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,8 @@
   </style>
 </head>
 <body>
-  <canvas id="canvas" width="640" height="640"></canvas>
+  <!-- the canvas must have the id 'spark' -->
+  <canvas id="spark" width="640" height="640"></canvas>
 
   <!-- must be after the canvas -->
   <script type="text/javascript" src="game/spark.js"></script>
