--- a/www/index.html
+++ b/www/index.html
@@ -12,17 +12,12 @@
       padding: 0;
     }
 
-    h1 {
-      color: #fff;
-      font-family: monospace;
-    }
-
     /* center the canvas */
     canvas {
       background: #000;
-			position: fixed;
-			left: 0;
-			right: 0;
+      position: fixed;
+      left: 0;
+      right: 0;
       border: 0;
     }
   </style>
@@ -31,7 +26,7 @@
   <!-- the canvas must have the id 'spark' -->
   <canvas id="spark" width="640" height="640"></canvas>
 
-  <!-- must be after the canvas -->
+  <!-- must be after the canvas, in this order -->
   <script type="text/javascript" src="game/spark.js"></script>
   <script type="text/javascript" src="game/main.js"></script>
 </body>
