--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,8 @@
     canvas {
       background: #000;
       position: fixed;
+      width: 100%;
+      height: 100%;
       left: 0;
       right: 0;
       border: 0;
@@ -24,7 +26,7 @@
 </head>
 <body>
   <!-- the canvas must have the id 'spark' -->
-  <canvas id="spark" width="640" height="640"></canvas>
+  <canvas id="spark"></canvas>
 
   <!-- must be after the canvas, in this order -->
   <script type="text/javascript" src="game/spark.js"></script>
